--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
   margin: 0;
   font-family: sans-serif;
+  line-height: 1.4;;
 }
 
 a:focus {
@@ -21,10 +22,11 @@ a:focus {
 
 /* Header styles. */
 header {
+  max-width: 100ch;
   padding: var(--default-container-padding);
 }
 
-h1 a {
+header h1 a {
   color: inherit;
   text-decoration: none;
 }
@@ -54,6 +56,11 @@ table {
 td, th {
   padding: 15px;
   text-align: start;
+  transition: color 0.2s;
+}
+
+td:hover {
+  color: var(--hover-text-color);
 }
 
 th {
@@ -89,7 +96,6 @@ textarea {
 }
 
 button {
-  margin-top: auto;
   border: 0;
   background: #0f6292;
   appearance: none;
