--- a/style.css
+++ b/style.css
@@ -39,13 +39,25 @@ main {
   padding: var(--default-container-padding);
 }
 
+main a {
+  color: var(--blue);
+}
+
+.placeholder {
+  height: 100%;
+  padding: 20px;
+  background: #f1f4f7;
+  font-size: 20px;
+}
+
 /* Table styles. */
 .table-container {
   --hover-border-width: 3px;
   --hover-border-color: white;
   --sidebar-width: 250px;
 
-  margin-top: 20px;
+  flex-grow: 1;
+  margin-top: 25px;
 }
 
 table {
@@ -57,6 +69,10 @@ td, th {
   padding: 15px;
   text-align: start;
   transition: color 0.2s;
+  vertical-align: baseline;
+  /* If there's a 💩 load of cells, this can speed up the initial render. */
+  content-visibility: auto;
+  contain-intrinsic-size: 50px 50px;
 }
 
 td:hover {
@@ -80,6 +96,7 @@ tr:first-child th span {
 
 /* Form styles. */
 form {
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   gap: var(--gap);
