--- a/css/form.css
+++ b/css/form.css
@@ -1,10 +1,22 @@
 /* Form styles. */
 form {
+  position: sticky;
+  left: var(--default-container-padding);
+  max-width: 100vw;
   flex-shrink: 0;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: var(--gap);
-  width: var(--sidebar-width);
+  align-items: flex-end;
+}
+
+@media (min-width: 1000px) {
+  form {
+    position: static;
+    flex-direction: column;
+    align-items: stretch;
+    width: var(--sidebar-width);
+  }
 }
 
 textarea {
