Move around some CSS

--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,6 @@
 :root {
   --color-primary: #0f6292;
+  --color-primary-light: #0d77b5;
   --default-container-padding: 10px;
   --sidebar-width: 250px;
   --gap: 20px;
