--- a/css/form.css
+++ b/css/form.css
@@ -30,7 +30,7 @@ textarea {
 }
 
 button {
-  border: 0;
+  border: solid 1px transparent;
   background: var(--color-primary);
   appearance: none;
   color: white;
