--- a/css/base.css
+++ b/css/base.css
@@ -2,7 +2,7 @@
   --color-primary: #0f6292;
   --color-primary-light: #0d77b5;
   --default-container-padding: 10px;
-  --sidebar-width: 350px;
+  --sidebar-width: 550px;
   --gap: 20px;
 }
 
@@ -45,7 +45,7 @@ main {
   padding: var(--default-container-padding);
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   main {
     flex-direction: row;
   }
@@ -70,7 +70,7 @@ footer {
   color: white;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   footer {
     padding: 40px var(--default-container-padding) 40px calc(var(--default-container-padding) + var(--sidebar-width) + var(--gap));
   }
@@ -85,7 +85,7 @@ footer a {
   display: none;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .show-large {
     display: revert;
   }
@@ -102,4 +102,14 @@ code {
 
 li p:first-child {
   margin-top: 0;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
 }
