--- a/css/form.css
+++ b/css/form.css
@@ -2,14 +2,13 @@
 form {
   position: sticky;
   left: var(--default-container-padding);
-  max-width: 100vw;
   flex-shrink: 0;
   flex-direction: row;
   display: flex;
   flex-wrap: wrap;
   gap: var(--gap);
   align-items: flex-end;
-  max-width: 95vw;
+  max-width: calc(95vw - var(--gap));
 }
 
 form > label {
@@ -76,11 +75,17 @@ textarea {
   background: var(--color-primary);
   appearance: none;
   color: white;
-  padding: 15px 20px;
+  padding-inline: 15px;
   font-weight: bold;
   font-size: 16px;
   cursor: pointer;
   border-radius: 2px;
+  min-height: 24px;
+  min-width: 24px;
+}
+
+.button-submit {
+  min-height: 3rem;
 }
 
 .color-input-form input {
@@ -150,8 +155,10 @@ textarea {
 
 .checkbox-flex {
   display: flex;
-  line-height: 1;
+  align-items: center;
   gap: 0.5em;
+  line-height: 1;
+  min-height: 3rem;
 }
 
 .checkbox-flex input[type="checkbox"] {
